Abrindo meu primeiro relatório com Spring MVC

--- a/src/main/resources/templates/reports.html
+++ b/src/main/resources/templates/reports.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Bem vindo ao curso!!!</h1>
-    <h2 th:text="${conn}"></h2> 
-    <a th:href="@{/reports}">Abrir Página</a>
+    <h2>Relatório 01</h2> 
+    <a th:href="@{/relatorio/pdf/jr1(code='01', acao='v')}">Abrir</a>
+    <a th:href="@{/relatorio/pdf/jr1(code='01', acao='d')}">Download</a>
 </body>
 </html>
