--- a/src/main/resources/templates/reports.html
+++ b/src/main/resources/templates/reports.html
@@ -11,5 +11,23 @@
     <h2>Relatório 01</h2> 
     <a th:href="@{/relatorio/pdf/jr1(code='01', acao='v')}">Abrir</a>
     <a th:href="@{/relatorio/pdf/jr1(code='01', acao='d')}">Download</a>
+    <br>
+    <a th:href="@{/relatorio/pdf/jr9(code='01', acao='v')}">Abrir</a>
+	<div>
+    	<h2>Relatório 09</h2> 	
+    	<form th:action="@{/relatorio/pdf/jr9/09}" method="get">
+    		<select id="nivel" name="nivel">
+    			<option value="">Selecione o nivel</option>
+    			<option th:each="nivel : ${niveis}" th:value="${nivel}" th:text="${nivel}">Selecione o nivel</option>
+    		</select>
+    		<select id="uf" name="uf">
+    			<option value="">Selecione o nivel</option>
+    			<option th:each="uf : ${ufs}" th:value="${uf}" th:text="${uf}">Selecione UFs</option>
+    		</select>
+    		
+    		<button type="submit">Buscar</button>
+    		
+    	</form>
+	</div>    
 </body>
 </html>
