ajustes de download

--- a/src/main/resources/templates/reports.html
+++ b/src/main/resources/templates/reports.html
@@ -28,5 +28,12 @@
     		
     	</form>
 	</div>    
+	
+	<hr>
+	<div>
+		<h2>Relatório 10</h2> 
+    		<a th:href="@{/relatorio/pdf/jr1(code='10', acao='v')}">Abrir</a>
+    		<a th:href="@{/relatorio/pdf/jr1(code='10', acao='d')}">Download</a>
+	</div>
 </body>
 </html>
