criando tela para download em pdf relatorio 19

--- a/src/main/resources/templates/reports.html
+++ b/src/main/resources/templates/reports.html
@@ -35,5 +35,28 @@
     		<a th:href="@{/relatorio/pdf/jr1(code='10', acao='v')}">Abrir</a>
     		<a th:href="@{/relatorio/pdf/jr1(code='10', acao='d')}">Download</a>
 	</div>
+	
+	<hr>
+	<div>
+		<h2>Relatório 19</h2> 
+		<form action="@{/buscar/funcionarios}">
+    		<input type="text" id="nome" name="nome" placeholder="Nome do Funcionario">
+    		<button type="submit">Buscar</button>		
+		</form>
+		<br>
+		<table>
+			<thead>
+				<th>Nome do Funcionario</th>
+				<th>Emitir Certificado</th>
+			</thead>
+			<tbody>
+				<tr th:each="f : ${funcionarios}"></tr>
+				<td th:text="${f.get('nome')}"></td>
+				<td>
+					<a th:href="@{/relatorio/pdf/jr19/19(idf=${f.get('id')})}">PDF</a>
+				</td>
+			</tbody>
+		</table>
+	</div>
 </body>
 </html>
